unpackaged/main/default/objects/Lead/fields/ETT_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>ETT_Emirates_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>