unpackaged/main/default/objects/Lead/fields/ETT_Expected_Retread_Millage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Expected_Retread_Millage__c</fullName>
    <label>Expected Retread Millage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>