unpackaged/main/default/objects/Lead/fields/ETT_Final_Rejection__c.field-meta.xml
<CustomField>
    <fullName>ETT_Final_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Rejection</label>
    <type>Checkbox</type>
</CustomField>