unpackaged/main/default/objects/Lead/fields/ETT_Fleet_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>ETT_Fleet_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fleet inspection required for the customer</description>
    <label>Fleet Inspection Required</label>
    <type>Checkbox</type>
</CustomField>