unpackaged/main/default/objects/Lead/fields/ETT_FM_Rejection_Comments__c.field-meta.xml
<CustomField>
    <fullName>ETT_FM_Rejection_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FM Rejection Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>