unpackaged/main/default/objects/Lead/fields/ETT_Government__c.field-meta.xml
<CustomField>
    <fullName>ETT_Government__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Legal Status - Government</description>
    <label>Government</label>
    <type>Checkbox</type>
</CustomField>