unpackaged/main/default/objects/Lead/fields/ETT_isSupplierConvert__c.field-meta.xml
<CustomField>
    <fullName>ETT_isSupplierConvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Convert ?</label>
    <type>Checkbox</type>
</CustomField>