unpackaged/main/default/objects/Lead/fields/ETT_Lead_Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Lead_Approval_Stage__c</fullName>
    <label>Lead Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Pending for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>