unpackaged/main/default/objects/Lead/fields/ETT_LLC__c.field-meta.xml
<CustomField>
    <fullName>ETT_LLC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer Legal Status - LLC</description>
    <label>LLC</label>
    <type>Checkbox</type>
</CustomField>