unpackaged/main/default/objects/Lead/fields/ETT_Login_User_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Login_User_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+ $User.Id ,  $User.FirstName + &#39; &#39; +$User.LastName , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login User Name</label>
    <type>Text</type>
</CustomField>