unpackaged/main/default/objects/Lead/fields/ETT_Name_of_Chief_Executive_Officer__c.field-meta.xml
<CustomField>
    <fullName>ETT_Name_of_Chief_Executive_Officer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Chief Executive Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>