unpackaged/main/default/objects/Lead/fields/ETT_Name_of_Company__c.field-meta.xml
<CustomField>
    <fullName>ETT_Name_of_Company__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>