unpackaged/main/default/objects/Lead/fields/ETT_Name_of_Owners_Sponsors_1__c.field-meta.xml
<CustomField>
    <fullName>ETT_Name_of_Owners_Sponsors_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Owners / Sponsors 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>