unpackaged/main/default/objects/Lead/fields/ETT_Name_of_Owners_Sponsors_2__c.field-meta.xml
<CustomField>
    <fullName>ETT_Name_of_Owners_Sponsors_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Owners / Sponsors 2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>