unpackaged/main/default/objects/Lead/fields/ETT_Name_of_Owners_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>ETT_Name_of_Owners_Sponsors__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Owners / Sponsors</label>
    <type>TextArea</type>
</CustomField>