unpackaged/main/default/objects/Lead/fields/ETT_Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>ETT_Nature_of_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nature of Business</label>
    <type>TextArea</type>
</CustomField>