unpackaged/main/default/objects/Lead/fields/ETT_Owner_Phone1__c.field-meta.xml
<CustomField>
    <fullName>ETT_Owner_Phone1__c</fullName>
    <description>Customer owner phone number 1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone 1</label>
    <type>Phone</type>
</CustomField>