unpackaged/main/default/objects/Lead/fields/ETT_Owners_Sponers_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>ETT_Owners_Sponers_Phone_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owners / Sponers Phone 2</label>
    <type>Phone</type>
</CustomField>