unpackaged/main/default/objects/Lead/fields/ETT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>ETT_Payment_Terms__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>