unpackaged/main/default/objects/Lead/fields/ETT_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>