unpackaged/main/default/objects/Lead/fields/ETT_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Quote_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quote Date</label>
    <type>Date</type>
</CustomField>