unpackaged/main/default/objects/Lead/fields/ETT_Re_Submit_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ETT_Re_Submit_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Re-Submit Reasons</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>