unpackaged/main/default/objects/Lead/fields/ETT_Recomended_Retreaded_Process__c.field-meta.xml
<CustomField>
    <fullName>ETT_Recomended_Retreaded_Process__c</fullName>
    <label>Recomended Retreaded Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>