unpackaged/main/default/objects/Lead/fields/ETT_Sales_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>ETT_Sales_Person_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Person Email</label>
    <type>Email</type>
</CustomField>