unpackaged/main/default/objects/Lead/fields/ETT_Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Sales_Person_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>