unpackaged/main/default/objects/Lead/fields/ETT_Scrap_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>ETT_Scrap_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scrap inspection required by the customer</description>
    <label>Scrap Inspection Required</label>
    <type>Checkbox</type>
</CustomField>