unpackaged/main/default/objects/Lead/fields/ETT_Test_Tyre_Required__c.field-meta.xml
<CustomField>
    <fullName>ETT_Test_Tyre_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Tyre Required</label>
    <type>Checkbox</type>
</CustomField>