unpackaged/main/default/objects/Lead/fields/ETT_Trade_License_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Trade_License_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>