unpackaged/main/default/objects/Lead/fields/ETT_Trade_Licenses_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Trade_Licenses_Expiry_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Licenses Expiry Date</label>
    <type>Date</type>
</CustomField>