unpackaged/main/default/objects/Lead/fields/ETT_VAT_TRN__c.field-meta.xml
<CustomField>
    <fullName>ETT_VAT_TRN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TRN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>