unpackaged/main/default/objects/Lead/fields/ETT_VAT_TRN_No__c.field-meta.xml
<CustomField>
    <fullName>ETT_VAT_TRN_No__c</fullName>
    <label>TRN Del\</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>