unpackaged/main/default/objects/Lead/fields/GL_Activity__c.field-meta.xml
<CustomField>
    <fullName>GL_Activity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>