unpackaged/main/default/objects/Lead/fields/GL_Activity_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Activity_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>equals</operation>
            <valueField>GL_Activity__c.GL_Zone_Lookup__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>GL_Activity__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>