unpackaged/main/default/objects/Lead/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>