unpackaged/main/default/objects/Lead/fields/GL_Department_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Department_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>ETSALES_Department__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>