unpackaged/main/default/objects/Lead/fields/GL_ETSALESRegion__c.field-meta.xml
<CustomField>
    <fullName>GL_ETSALESRegion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>