unpackaged/main/default/objects/Lead/fields/GL_Location__c.field-meta.xml
<CustomField>
    <fullName>GL_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>