unpackaged/main/default/objects/Lead/fields/GL_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Project_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>