unpackaged/main/default/objects/Lead/fields/GL_Project_Code_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Project_Code_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>GL_Project__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>