unpackaged/main/default/objects/Lead/fields/GL_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>GL_Zone__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>