unpackaged/main/default/objects/Lead/fields/IsConvertedLead_del__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedLead_del__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsConvertedLead</label>
    <type>Checkbox</type>
</CustomField>