unpackaged/main/default/objects/Lead/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>