unpackaged/main/default/objects/Lead/fields/Moto_Time__c.field-meta.xml
<CustomField>
    <fullName>Moto_Time__c</fullName>
    <formula>IF(HOUR( TIMEVALUE(Appointment_Date__c+(4/24))) == 0,&#39;12:&#39;+IF(MINUTE(TIMEVALUE(Appointment_Date__c))&lt;10,&#39;0&#39;+TEXT(MINUTE(TIMEVALUE(Appointment_Date__c))),TEXT(MINUTE(TIMEVALUE(Appointment_Date__c)))),If(HOUR( TIMEVALUE(Appointment_Date__c+(4/24))) &lt;=12, LEFT(Text(TIMEVALUE( Appointment_Date__c+(4/24))),5),LEFT(Text(TIMEVALUE( Appointment_Date__c -(8/24))),5) ))+&#39; &#39;+IF(HOUR(TIMEVALUE(Appointment_Date__c+(4/24))) &gt;=12,&#39;PM&#39;,&#39;AM&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moto Time</label>
    <type>Text</type>
</CustomField>