unpackaged/main/default/objects/Lead/fields/Moto_Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Moto_Unqualified_Reason__c</fullName>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Number Switched Off</fullName>
            </value>
            <value>
                <fullName>Not Interested Now</fullName>
            </value>
            <value>
                <fullName>Vehicle Not Available</fullName>
            </value>
            <value>
                <fullName>Not Premium Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>