unpackaged/main/default/objects/Lead/fields/Moto_Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Moto_Vehicle_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Vehicle_Model_Master__c.Vehicle_Brand__c</field>
            <operation>equals</operation>
            <valueField>$Source.Vehicle_Brand__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Vehicle_Model_Master__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>