unpackaged/main/default/objects/Lead/fields/No_of_Used_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>No_of_Used_Vehicles__c</fullName>
    <label>No. of Used Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>