unpackaged/main/default/objects/Lead/fields/Passprt_Number__c.field-meta.xml
<CustomField>
    <fullName>Passprt_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passprt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>