unpackaged/main/default/objects/Lead/fields/Price_for_Body_Polishing__c.field-meta.xml
<CustomField>
    <fullName>Price_for_Body_Polishing__c</fullName>
    <formula>IF(
    ISPICKVAL(Body_Type__c, &quot;SUV&quot;),
    200,
    IF(
        ISPICKVAL(Body_Type__c, &quot;Sedan&quot;),
        150,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price for Body Polishing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>