unpackaged/main/default/objects/Lead/fields/Profile_Class__c.field-meta.xml
<CustomField>
    <fullName>Profile_Class__c</fullName>
    <label>Profile Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ETSALES_Customer_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Ministries</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Semi Government</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
                <isActive>false</isActive>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>