unpackaged/main/default/objects/Lead/fields/Recovery__c.field-meta.xml
<CustomField>
    <fullName>Recovery__c</fullName>
    <label>Recovery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>