unpackaged/main/default/objects/Lead/fields/Service_Cateogry__c.field-meta.xml
<CustomField>
    <fullName>Service_Cateogry__c</fullName>
    <label>Service Cateogry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bodyshop</fullName>
            </value>
            <value>
                <fullName>Car Care</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Quick Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>