unpackaged/main/default/objects/Lead/fields/Service_Required__c.field-meta.xml
<CustomField>
    <fullName>Service_Required__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Emirates_Moto_Service</valueSetName>
    </valueSet>
</CustomField>