unpackaged/main/default/objects/Lead/fields/Simply_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Simply_Book_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Simply Book Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>