unpackaged/main/default/objects/Lead/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>