unpackaged/main/default/objects/Lead/fields/Test_Datew__c.field-meta.xml
<CustomField>
    <fullName>Test_Datew__c</fullName>
    <formula>Appointment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Datew</label>
    <type>DateTime</type>
</CustomField>