unpackaged/main/default/objects/Lead/fields/Test_Drive_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Drive DateTime</label>
    <type>DateTime</type>
</CustomField>