unpackaged/main/default/objects/Lead/fields/Time_Received__c.field-meta.xml
<CustomField>
    <fullName>Time_Received__c</fullName>
    <label>Time Received</label>
    <type>Time</type>
</CustomField>