unpackaged/main/default/objects/Lead/fields/Trade_In__c.field-meta.xml
<CustomField>
    <fullName>Trade_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade-In ?</label>
    <type>Checkbox</type>
</CustomField>