unpackaged/main/default/objects/Lead/fields/Trade_In_Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_In_Chassis_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade-In Chassis Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>